--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,7 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "4efcbd37-c4a1-4388-a7fb-a9f1a1fe807a"
   }
 }
