--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.5",
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "express": "^4.18.2",
     "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
